--- a/CNEW.vcxproj
+++ b/CNEW.vcxproj
@@ -142,13 +142,33 @@
     <ClCompile Include="1.1ifelseExercise.cpp" />
     <ClCompile Include="1.2ifelseExerice.cpp" />
     <ClCompile Include="1.3ifelseExercise.cpp" />
+    <ClCompile Include="1.4multiIfElse.cpp" />
+    <ClCompile Include="1.5nestedIfElse嵌套分支.cpp" />
     <ClCompile Include="1.ifelseDemo.cpp" />
     <ClCompile Include="1exercise.cpp" />
     <ClCompile Include="1逻辑运算符练习.cpp" />
+    <ClCompile Include="2.0SwitchDemo.cpp" />
+    <ClCompile Include="2.1switchExercise.cpp" />
     <ClCompile Include="2assignedoperator赋值运算符.cpp" />
+    <ClCompile Include="3.0forDemo.cpp" />
+    <ClCompile Include="3.1for exercise1.cpp" />
+    <ClCompile Include="3.1for exercise2.cpp" />
     <ClCompile Include="3multiOperator三元运算符.cpp" />
+    <ClCompile Include="4.0whileDemo.cpp" />
+    <ClCompile Include="4.1whileExercise1.cpp" />
     <ClCompile Include="4InputDemo键盘输入语句.cpp" />
+    <ClCompile Include="5.0DoWhileDemo.cpp" />
+    <ClCompile Include="5.1DoWhileExercise1.cpp" />
+    <ClCompile Include="5.2多重循环练习1.cpp" />
+    <ClCompile Include="5.2多重循环练习2.cpp" />
+    <ClCompile Include="5.2循环联系_pyramid.cpp" />
     <ClCompile Include="5exercise.cpp" />
+    <ClCompile Include="6.0breakDemo.cpp" />
+    <ClCompile Include="6.1breakExercise.cpp" />
+    <ClCompile Include="7.0ConinueDemo.cpp" />
+    <ClCompile Include="7.1ContinueExercise1.cpp" />
+    <ClCompile Include="8.0GotoDemo.cpp" />
+    <ClCompile Include="9.0综合练习.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
